Sparepart-ecom-backend/ops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spareparts-api
spec:
  selector:
    app: spareparts-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
